# mkdocs-material-tutorial

./: 404.html  README.md  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
about/: index.html
admonitions/: index.html
code-example/: index.html
content-tabs/: index.html
diagram-examples/: index.html
docs/: about.md  admonitions.md  code-example.md  diagram-examples.md  docstrings.md
docstrings/: index.html
search/: search_index.json
src/dupy/: __main__.py  greetings.py
