[project]
name = "mkdocu"
version = "0.1.0"
description = "This is a sample repository created to explore and get familiar with MkDocs Material."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.5.48",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.12.2",
    "mkdocstrings>=0.27.0",
]
